# readannots

./: .gitignore  .pdm-python  README.md  pyproject.toml
highlight/: package.json
highlight/src/pages/: index.astro
src/: read.py  watch_pdfannots.sh  watcher.py  watcher_by_pdfminer.six.py
src/reading/: Bitcoin.202505.pdfannots.json  Bitcoin.202505.pdfannots.md  Bitcoin.20250516_074303.annots.md  Bitcoin.20250516_074303.pdfannots.md  The Go Programming Language.20250515_123253.annots.md  分布式原理介绍.202505.annots.md  分布式原理介绍.202505.pdfannots.json  分布式原理介绍.20250515_100819.annots.md  分布式原理介绍.20250515_100819.pdfannots.md  分布式原理介绍.202506.pdfannots.md.html
