[project]
name = "readannots"
version = "0.1.0"
description = "A simple python package to read annotations from pdf file"
authors = [{ name = "tianyw0", email = "hello.tianyongwei@gmail.com" }]
dependencies = [
    "PyMuPDF>=1.25.5",
    "pdfannots>=0.5",
    "markdown>=3.8",
    "watchdog>=6.0.0",
    "pdfminer-six>=20250506",
]
requires-python = ">=3.13"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
watch = "python src/watcher.py --line-height 0.1"
read = "python src/read.py"
